# rust-command

./: Cargo.toml
src/: main.rs
tests/: cli.rs
