[package]
name = "rust-command"
version = "0.1.0"
authors = ["juryokun <capeta.kozo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.7"
env_logger = "0.9.0"
log = "0.4.14"
predicates = "2.0.0"
structopt = "0.3.21"
